--- a/empresa.html
+++ b/empresa.html
@@ -25,6 +25,7 @@
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link active" href="empresa.html">Empresa</a></li>
           <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
           <li class="nav-item"><a class="nav-link" href="cobertura.html">Cobertura</a></li>
@@ -36,9 +37,31 @@
   </nav>
 
   <!-- Hero Header -->
-  <header class="bg-dark text-white text-center py-5">
-    <h1 class="display-4 fw-bold">SH COMPANY S.A.S</h1>
-    <p class="lead">Soluciones tecnológicas en telecomunicaciones</p>
+  <header class="hero-header">
+    <div class="hero-particles">
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+    </div>
+    <div class="hero-content">
+      <h1 class="hero-title">SH COMPANY S.A.S</h1>
+      <p class="hero-subtitle">Soluciones tecnológicas innovadoras en telecomunicaciones</p>
+      <div class="hero-cta">
+        <a href="#valores" class="hero-btn">Conoce Más</a>
+      </div>
+    </div>
   </header>
 
   <!-- Misión + Imagen -->
@@ -115,8 +138,77 @@
     </div>
   </section>
 
+  <!-- Objetivos de Calidad -->
+  <section class="objetivos-section animate-section">
+    <div class="container">
+      <div class="text-center mb-5">
+        <h2 class="objetivos-title">OBJETIVOS DE CALIDAD</h2>
+        <p class="objetivos-subtitle">Nuestra hoja de ruta hacia la excelencia</p>
+      </div>
+      
+      <div class="objetivos-timeline">
+        <div class="timeline-line"></div>
+        
+        <div class="objetivo-item" data-index="1">
+          <div class="objetivo-circle">
+            <i class="fas fa-heart"></i>
+            <div class="circle-number">01</div>
+          </div>
+          <div class="objetivo-content">
+            <h4>Satisfacción del Cliente</h4>
+            <p>Satisfacer las necesidades y expectativas que el cliente tiene con nuestro servicio.</p>
+          </div>
+        </div>
+
+        <div class="objetivo-item" data-index="2">
+          <div class="objetivo-circle">
+            <i class="fas fa-signal"></i>
+            <div class="circle-number">02</div>
+          </div>
+          <div class="objetivo-content">
+            <h4>Expansión de Cobertura</h4>
+            <p>Aumentar la cobertura en la prestación de servicios de telecomunicaciones.</p>
+          </div>
+        </div>
+
+        <div class="objetivo-item" data-index="3">
+          <div class="objetivo-circle">
+            <i class="fas fa-chart-line"></i>
+            <div class="circle-number">03</div>
+          </div>
+          <div class="objetivo-content">
+            <h4>Rentabilidad del Negocio</h4>
+            <p>Mejorar la rentabilidad del negocio.</p>
+          </div>
+        </div>
+
+        <div class="objetivo-item" data-index="4">
+          <div class="objetivo-circle">
+            <i class="fas fa-cogs"></i>
+            <div class="circle-number">04</div>
+          </div>
+          <div class="objetivo-content">
+            <h4>Mejoramiento Continuo</h4>
+            <p>Mantener el mejoramiento continuo del sistema gestión de calidad.</p>
+          </div>
+        </div>
+
+        <div class="objetivo-item" data-index="5">
+          <div class="objetivo-circle">
+            <i class="fas fa-comments"></i>
+            <div class="circle-number">05</div>
+          </div>
+          <div class="objetivo-content">
+            <h4>Comunicación Efectiva</h4>
+            <p>Mantener contacto con nuestros clientes para responder las peticiones, quejas, reclamos y sugerencias, basándonos siempre en la alineación con el negocio de nuestros clientes en beneficio de un excelente servicio.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Valores corporativos -->
-<section class="bg-light py-5 animate-section valores-section">
+<section id="valores" class="bg-light py-5 animate-section valores-section">
   <div class="container">
     <h2 class="text-center text-orange fw-bold mb-5">Valores Corporativos</h2>
     <div class="row g-4 justify-content-center">
@@ -126,7 +218,7 @@
             <i class="fas fa-ear-listen"></i>
           </div>
           <h5 class="fw-bold text-orange mb-2">Escuchar</h5>
-          <p>Escuchamos activamente para proponer soluciones adecuadas.</p>
+          <p>Escuchamos con atención a nuestros clientes para conocer con exactitud sus necesidades y proponerle soluciones adecuadas. Tenemos los ojos y oídos del cliente en cualquier operación que desarrollemos.</p>
         </div>
       </div>
       <div class="col-md-4">
@@ -135,7 +227,7 @@
             <i class="fas fa-bolt"></i>
           </div>
           <h5 class="fw-bold text-orange mb-2">Velocidad</h5>
-          <p>Tomamos decisiones rápidas y actuamos con dinamismo.</p>
+          <p>Tomamos decisiones rápidas y actuamos con celeridad y dinamismo. Focalizamos de manera ágil la solución a problemas proponiendo alternativas realistas, de calidad y viables.</p>
         </div>
       </div>
       <div class="col-md-4">
@@ -144,7 +236,7 @@
             <i class="fas fa-crosshairs"></i>
           </div>
           <h5 class="fw-bold text-orange mb-2">Rigor</h5>
-          <p>Información clara y objetiva con coherencia.</p>
+          <p>Proporcionamos información continua, veraz, clara y objetiva. Facilitamos el acceso a la información necesaria manteniendo una actitud accesible y coherencia entre pensamientos y acciones.</p>
         </div>
       </div>
       <div class="col-md-4">
@@ -153,7 +245,7 @@
             <i class="fas fa-eye"></i>
           </div>
           <h5 class="fw-bold text-orange mb-2">Transparencia</h5>
-          <p>Comunicación abierta, accesible y honesta.</p>
+          <p>Proporcionamos información continua, veraz, clara y objetiva. Facilitamos el acceso a la información necesaria manteniendo coherencia entre nuestros pensamientos y acciones.</p>
         </div>
       </div>
       <div class="col-md-4">
@@ -162,7 +254,7 @@
             <i class="fas fa-lightbulb"></i>
           </div>
           <h5 class="fw-bold text-orange mb-2">Innovación</h5>
-          <p>Buscamos mejoras constantes y soluciones novedosas.</p>
+          <p>Buscamos activamente mejorar productos y servicios, creando nuevas oportunidades de negocio. Actualizamos constantemente nuestros conocimientos tecnológicos para ser pioneros en innovación.</p>
         </div>
       </div>
       <div class="col-md-4">
@@ -171,7 +263,7 @@
             <i class="fas fa-hands-helping"></i>
           </div>
           <h5 class="fw-bold text-orange mb-2">Servicio</h5>
-          <p>Resolvemos necesidades con eficiencia y actitud resolutiva.</p>
+          <p>Conocemos las necesidades de nuestros clientes para desarrollar soluciones que aumenten su satisfacción. Atendemos con eficiencia, comportamiento ágil y resolutivo que potencia la credibilidad de la compañía.</p>
         </div>
       </div>
     </div>
@@ -179,9 +271,32 @@
 </section>
 
 
-  <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-3">
-    © 2025 SH COMPANY S.A.S - Todos los derechos reservados
+  <!-- Footer final -->
+  <footer class="footer-institucional py-4 border-top">
+    <div class="container">
+      <div class="row align-items-center text-center text-md-start">
+
+        <!-- Logo -->
+        <div class="col-md-4 mb-3 mb-md-0">
+          <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+        </div>
+
+        <!-- Información de contacto -->
+        <div class="col-md-5">
+          <h2 class="text-center text-orange fw-bold mb-4">Contacto</h2>
+          <strong>Dirección:</strong> Cll 25ª # 7ª 12 Barrio la Inmaculada, Ayapel, Córdoba<br>
+          <strong>Celular:</strong> 321 603 1932 - 320 322 0865<br>
+          <strong>Correo:</strong> <a href="mailto:internetjhs@gmail.com">internetjhs@gmail.com</a>
+        </div>
+
+        <!-- Copyright -->
+        <div class="col-md-3">
+          <p class="text-white small mt-2">
+            Copyright © 2025 SH COMPANY SAS. Todos los derechos reservados.
+          </p>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <!-- Scripts -->
