--- a/empresa.html
+++ b/empresa.html
@@ -285,7 +285,7 @@
         <div class="col-md-5">
           <h2 class="text-center text-orange fw-bold mb-4">Contacto</h2>
           <strong>Dirección:</strong> Cll 25ª # 7ª 12 Barrio la Inmaculada, Ayapel, Córdoba<br>
-          <strong>Celular:</strong> 321 603 1932 - 320 322 0865<br>
+          <strong>Celular:</strong> (314) 868 6245 - (313) 536 2337<br>
           <strong>Correo:</strong> <a href="mailto:internetjhs@gmail.com">internetjhs@gmail.com</a>
         </div>
 
