--- a/empresa.html
+++ b/empresa.html
@@ -28,9 +28,10 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link active" href="empresa.html">Empresa</a></li>
           <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
-          <li class="nav-item"><a class="nav-link" href="cobertura.html">Cobertura</a></li>
-          <li class="nav-item"><a class="nav-link" href="clientes.html">Clientes</a></li>
-          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
+          <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#testimonios">Clientes</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#contacto">Contacto</a></li>
         </ul>
       </div>
     </div>
