--- a/planes.html
+++ b/planes.html
@@ -27,8 +27,8 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
           <li class="nav-item"><a class="nav-link active" href="planes.html">Planes</a></li>
-          <li class="nav-item"><a class="nav-link" href="index.html#cobertura">Cobertura</a></li>
-          <li class="nav-item"><a class="nav-link" href="index.html#testimonios">Clientes</a></li>
+          <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
+          <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
           <li class="nav-item"><a class="nav-link" href="index.html#contacto">Contacto</a></li>
         </ul>
       </div>
