pqrs y soporte tecnico avanzado

--- a/soporte-tecnico.html
+++ b/soporte-tecnico.html
@@ -56,7 +56,7 @@
                         <p class="hero-subtitle">Te ayudamos a resolver cualquier problema técnico con tu servicio de internet</p>
                         <div class="hero-badge">
                             <i class="fas fa-clock me-2"></i>
-                            Atención 24/7
+                            Soluciones inmediatas
                         </div>
                     </div>
                 </div>
