se sube cambios de soporte tecnico

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
               <p>Barrio: La Inmaculada</p>
               <p>+57 3101234567</p>
             </div>
-            <a href="#" class="btn btn-elegante mt-3">Ver más</a>
+            <a href="/planes.html" class="btn btn-elegante mt-3">Ver más</a>
           </div>
         </div>
 
@@ -320,7 +320,7 @@
               <p>Barrio: La Inmaculada</p>
               <p>+57 3101234567</p>
             </div>
-            <a href="#" class="btn btn-elegante mt-3">Ver más</a>
+            <a href="/planes.html" class="btn btn-elegante mt-3">Ver más</a>
           </div>
         </div>
       </div>
@@ -454,7 +454,7 @@
             </div>
             <div class="mb-3">
               <label for="telefono" class="form-label">Numero de Telefono</label>
-              <input type="text" class="form-control" id="telefono" placeholder="3148686265" required>
+              <input type="text" class="form-control" id="telefono" placeholder="Ej:(314)868 6265" required>
             </div>
             <div class="mb-3">
               <label for="correo" class="form-label">Correo Electrónico</label>
