cambios para celular

--- a/index.html
+++ b/index.html
@@ -372,25 +372,25 @@
       <div class="row g-4 justify-content-center">
         <div class="col-md-6 col-lg-3 d-flex">
           <div class="denuncia-card text-center w-100">
-            <img src="./image/bienestar.png" alt="Bienestar Familiar">
+            <img src="./image/bienestar.png" alt="Bienestar Familiar" class="denuncia-img">
             <a href="https://www.icbf.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 d-flex">
           <div class="denuncia-card text-center w-100">
-            <img src="./image/policia.jpg" alt="Centro Cibernético Policial">
+            <img src="./image/policia.jpg" alt="Centro Cibernético Policial" class="denuncia-img">
             <a href="https://caivirtual.policia.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 d-flex">
           <div class="denuncia-card text-center w-100">
-            <img src="./image/entic.png" alt="En TIC Confío">
+            <img src="./image/entic.png" alt="En TIC Confío" class="denuncia-img">
             <a href="https://ciberpaz.gov.co/portal/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 d-flex">
           <div class="denuncia-card text-center w-100">
-            <img src="./image/fiscalia.jpg" alt="Fiscalía General de la Nación">
+            <img src="./image/Fiscalia.jpg" alt="Fiscalía General de la Nación" class="denuncia-img">
             <a href="https://www.fiscalia.gov.co/colombia/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
           </div>
         </div>
