--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active position-relative">
-          <video class="w-100 h-100 object-fit-cover rounded-bottom" autoplay muted loop playsinline webkit-playsinline>
+          <video autoplay muted loop playsinline webkit-playsinline>
             <source src="./image/video1.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
           </video>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="carousel-item position-relative">
-          <video class="w-100 h-100 object-fit-cover rounded-bottom" autoplay muted loop playsinline webkit-playsinline>
+          <video autoplay muted loop playsinline webkit-playsinline>
             <source src="./image/Video4.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
           </video>
@@ -61,7 +61,7 @@
         </div>
 
         <div class="carousel-item position-relative">
-          <img src="./image/ayapel.png" class="w-100 h-100 object-fit-cover rounded-bottom" alt="Banner 3">
+          <img src="./image/ayapel.png" alt="Banner 3" class="w-100 h-100" style="object-fit: cover;">
           <div class="overlay"></div>
           <div class="carousel-caption-custom">
             <h1 class="fw-bold display-5">Conéctate sin límites</h1>
@@ -102,7 +102,7 @@
       
       <!-- Hero de Internet + TV -->
       <div class="row align-items-center mb-5">
-        <div class="col-lg-6">
+        <div class="col-lg-6 order-lg-1 order-2">
           <div class="tv-hero-content">
             <h3 class="fw-bold mb-4">Internet de alta velocidad + Televisión HD en un solo paquete</h3>
             <p class="fs-5 text-muted mb-4">Disfruta de una amplia parrilla de canales nacionales e internacionales en alta definición. Contenido para que no te pierdas tus programas favoritos</p>
@@ -133,17 +133,17 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 order-lg-2 order-1">
           <div class="tv-visual text-center">
             <div class="package-visual">
-              <div class="internet-icon">
-                <i class="bi bi-wifi display-1 text-orange"></i>
+              <div class="internet-icon d-flex justify-content-center align-items-center">
+                <i class="bi bi-wifi text-orange"></i>
               </div>
-              <div class="plus-sign">
-                <span class="fs-1 fw-bold text-orange">+</span>
+              <div class="plus-sign d-flex justify-content-center align-items-center">
+                <span class="fw-bold text-orange">+</span>
               </div>
-              <div class="tv-icon">
-                <i class="bi bi-tv display-1 text-orange"></i>
+              <div class="tv-icon d-flex justify-content-center align-items-center">
+                <i class="bi bi-tv text-orange"></i>
               </div>
               <div class="package-glow"></div>
             </div>
