se suben cambios de familia sh

--- a/planes.html
+++ b/planes.html
@@ -23,15 +23,15 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
-          <li class="nav-item"><a class="nav-link active" href="planes.html">Planes</a></li>
-          <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
-          <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
-          <li class="nav-item"><a class="nav-link" href="index.html#contacto">Contacto</a></li>
-        </ul>
-      </div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="planes.html">Planes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
+                    <li class="nav-item"><a class="nav-link" href="familiash.html">Familia SH</a></li>
+                </ul>
+            </div>
     </div>
   </nav>
 
@@ -531,7 +531,6 @@
                       <i class="fas fa-globe-americas"></i>
                       <span>Solo Internet</span>
                     </div>
-                  </div>
                 </div>
                 <div class="plan-price">
                   <span class="price">60.000</span>
@@ -734,14 +733,16 @@
 
         <!-- Logo -->
         <div class="col-md-4 mb-3 mb-md-0">
-          <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          <a href="/planes.html" class="d-inline-block">
+            <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          </a>
         </div>
 
         <!-- Información de contacto -->
         <div class="col-md-5">
           <h2 class="text-center text-orange fw-bold mb-4">Contacto</h2>
           <strong>Dirección:</strong> Cll 25ª # 7ª 12 Barrio la Inmaculada, Ayapel, Córdoba<br>
-          <strong>Celular:</strong> 3(314) 868 6245 - (313) 536 2337<br>
+          <strong>Celular:</strong> (314) 868 6245 - (313) 536 2337<br>
           <strong>Correo:</strong> <a href="mailto:internetjhs@gmail.com">internetjhs@gmail.com</a>
         </div>
 
@@ -759,4 +760,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/planes.js"></script>
 </body>
+</html>
 </html>
