--- a/pqrs.html
+++ b/pqrs.html
@@ -23,15 +23,15 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
-          <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
-          <li class="nav-item"><a class="nav-link active" href="pqrs.html">PQRS</a></li>
-          <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
-          <li class="nav-item"><a class="nav-link" href="index.html#contacto">Contacto</a></li>
-        </ul>
-      </div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="pqrs.html">PQRS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
+                    <li class="nav-item"><a class="nav-link" href="familiash.html">Familia SH</a></li>
+                </ul>
+            </div>
     </div>
   </nav>
 
@@ -413,13 +413,16 @@
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- Footer final -->
   <footer class="footer-institucional py-4 border-top">
     <div class="container">
       <div class="row align-items-center text-center text-md-start">
+
         <!-- Logo -->
         <div class="col-md-4 mb-3 mb-md-0">
-          <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          <a href="/pqrs.html" class="d-inline-block">
+            <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          </a>
         </div>
 
         <!-- Información de contacto -->
