--- a/empresa.html
+++ b/empresa.html
@@ -24,16 +24,15 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link active" href="empresa.html">Empresa</a></li>
-          <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
-          <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
-          <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
-          <li class="nav-item"><a class="nav-link" href="index.html#testimonios">Clientes</a></li>
-          <li class="nav-item"><a class="nav-link" href="index.html#contacto">Contacto</a></li>
-        </ul>
-      </div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="empresa.html">Empresa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
+                    <li class="nav-item"><a class="nav-link" href="familiash.html">Familia SH</a></li>
+                </ul>
+            </div>
     </div>
   </nav>
 
@@ -279,7 +278,9 @@
 
         <!-- Logo -->
         <div class="col-md-4 mb-3 mb-md-0">
-          <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          <a href="#" class="d-inline-block">
+            <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          </a>
         </div>
 
         <!-- Información de contacto -->
@@ -304,4 +305,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/empresa.js"></script>
 </body>
+</html>
 </html>
