--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
           <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
           <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="familiash.html">Familia SH</a></li>
         </ul>
       </div>
     </div>
