--- a/soporte-tecnico.html
+++ b/soporte-tecnico.html
@@ -40,7 +40,7 @@
                     <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
                     <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
                     <li class="nav-item"><a class="nav-link active" href="soporte-tecnico.html">Soporte Técnico</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="familiash.html">Familia SH</a></li>
                 </ul>
             </div>
         </div>
@@ -93,7 +93,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/tecnico1.jpg" alt="Arnold jose trujillo mejia" class="avatar-img">
+                                                <img src="./image/personal/arnold.jpg" alt="Arnold jose trujillo mejia" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-tools"></i>
                                                 </div>
@@ -134,7 +134,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/tecnico2.jpg" alt="Dairo Andres Sampayo Delgado" class="avatar-img">
+                                                <img src="./image/personal/dairo.jpg" alt="Dairo Andres Sampayo Delgado" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-laptop-code"></i>
                                                 </div>
@@ -174,7 +174,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/tecnico3.jpg" alt="Leonardo José cerra salazar " class="avatar-img">
+                                                <img src="./image/personal/leonardo.jpg" alt="Leonardo José cerra salazar " class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-network-wired"></i>
                                                 </div>
@@ -220,7 +220,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/tecnico4.jpg" alt="Isai Sampayo Delgado" class="avatar-img">
+                                                <img src="./image/personal/isai.jpg" alt="Isai Sampayo Delgado" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-wifi"></i>
                                                 </div>
@@ -261,7 +261,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/tecnico5.jpg" alt="Hermis David Arrieta Cuello" class="avatar-img">
+                                                <img src="./image/personal/hermis.jpg" alt="Hermis David Arrieta Cuello" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-server"></i>
                                                 </div>
@@ -302,7 +302,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/tecnico6.jpg" alt="Frank Esney Alvarez Romero" class="avatar-img">
+                                                <img src="./image/personal/frank.jpg" alt="Frank Esney Alvarez Romero" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-headset"></i>
                                                 </div>
@@ -681,52 +681,35 @@
             </div>
         </div>
     </section>
-    <!-- Footer final -->
-    <footer class="footer-institucional py-4 border-top">
-        <div class="container">
-            <div class="row align-items-center text-center text-md-start">
+      <!-- Footer final -->
+  <footer class="footer-institucional py-4 border-top">
+    <div class="container">
+      <div class="row align-items-center text-center text-md-start">
 
-                <!-- Logo -->
-                <div class="col-md-3 mb-3 mb-md-0">
-                    <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
-                </div>
-
-                <!-- Información institucional -->
-                <div class="col-md-5 mb-3 mb-md-0">
-                    <small class="text-white d-block">
-                        Comisión de Regulación de Comunicaciones<br>
-                        Dirección: Calle 59A bis No. 5-53 Edificio Link Siete Piso 9<br>
-                        Bogotá D.C.<br>
-                        Horario de Atención: Lunes a Viernes 8:30 a.m. a 5:30 p.m
-                    </small>
-                </div>
-
-                <!-- Información de contacto -->
-                <div class="col-md-4">
-                    <h2 class="text-center text-orange fw-bold mb-4">Contacto</h2>
-                    <strong>Dirección:</strong> Cll 25ª # 7ª 12 Barrio la Inmaculada, Ayapel, Córdoba<br>
-                    <strong>Celular:</strong> (314) 868 6245 - (313) 536 2337<br>
-                    <strong>Correo:</strong> <a href="mailto:internetjhs@gmail.com">internetjhs@gmail.com</a>
-                </div>
-            </div>
-
-            <!-- Logos adicionales -->
-            <div class="row mt-4 text-center">
-                <div class="col-md-4 mb-3">
-                    <img src="./image/comunicados-logo.png" alt="Comunicados Como Es" class="img-fluid" style="max-height: 200px;">
-                </div>
-                <div class="col-md-4 mb-3">
-                    <img src="./image/mintic-logo.png" alt="MinTIC" class="img-fluid" style="max-height: 60px;">
-                </div>
-        
-                <div class="col-md-4 mb-3">
-                    <p class="text-white small mt-2">
-                        Copyright © 2025 SH COMPANY SAS. Todos los derechos reservados.<br>
-                    </p>
-                </div>
-            </div>
+        <!-- Logo -->
+        <div class="col-md-4 mb-3 mb-md-0">
+          <a href="/soporte-tecnico.html" class="d-inline-block">
+            <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          </a>
         </div>
-    </footer>
+
+        <!-- Información de contacto -->
+        <div class="col-md-5">
+          <h2 class="text-center text-orange fw-bold mb-4">Contacto</h2>
+          <strong>Dirección:</strong> Cll 25ª # 7ª 12 Barrio la Inmaculada, Ayapel, Córdoba<br>
+          <strong>Celular:</strong> (314) 868 6245 - (313) 536 2337<br>
+          <strong>Correo:</strong> <a href="mailto:internetjhs@gmail.com">internetjhs@gmail.com</a>
+        </div>
+
+        <!-- Copyright -->
+        <div class="col-md-3">
+          <p class="text-white small mt-2">
+            Copyright © 2025 SH COMPANY SAS. Todos los derechos reservados.
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
