--- a/familiash.html
+++ b/familiash.html
@@ -18,8 +18,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <!-- CSS personalizado -->
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/familiash.css">
+    <link rel="stylesheet" href="./css/index.css?v=1.7">
+    <link rel="stylesheet" href="./css/familiash.css?v=1.7">
 </head>
 <body>
     <!-- Navbar -->
@@ -123,10 +123,18 @@
 
             <!-- Filtros de Galería -->
             <div class="gallery-filters text-center mb-5" data-aos="fade-up" data-aos-delay="100">
-                <button class="filter-btn active" data-filter="cumpleanos">Cumpleaños</button>
-                <button class="filter-btn" data-filter="eventos">Eventos Especiales</button>
-                <button class="filter-btn" data-filter="navidad">Navidad</button>
-                <button class="filter-btn" data-filter="aniversarios">Aniversarios</button>
+                <button class="filter-btn active" data-filter="cumpleanos">
+                    <i class="fas fa-birthday-cake me-2"></i>Cumpleaños
+                </button>
+                <button class="filter-btn" data-filter="eventos">
+                    <i class="fas fa-star me-2"></i>Eventos Especiales
+                </button>
+                <button class="filter-btn" data-filter="navidad">
+                    <i class="fas fa-snowflake me-2"></i>Navidad
+                </button>
+                <button class="filter-btn" data-filter="aniversarios">
+                    <i class="fas fa-trophy me-2"></i>Aniversarios
+                </button>
             </div>
 
             <!-- Grid de Fotos -->
@@ -151,7 +159,7 @@
                     <div class="col-md-3 col-6">
                         <div class="stat-box">
                             <div class="stat-icon">
-                                <i class="fas fa-trophy"></i>
+                                <i class="fas fa-star"></i>
                             </div>
                             <div class="stat-number" id="achievementPhotos">0</div>
                             <div class="stat-label">Eventos Especiales</div>
@@ -160,7 +168,7 @@
                     <div class="col-md-3 col-6">
                         <div class="stat-box">
                             <div class="stat-icon">
-                                <i class="fas fa-users"></i>
+                                <i class="fas fa-snowflake"></i>
                             </div>
                             <div class="stat-number" id="teamPhotos">0</div>
                             <div class="stat-label">Celebraciones Navideñas</div>
@@ -248,21 +256,22 @@
     </section>
 
     <!-- Modal para ver fotos -->
-    <div class="modal fade" id="photoModal" tabindex="-1">
-        <div class="modal-dialog modal-xl modal-dialog-centered">
-            <div class="modal-content bg-transparent border-0">
-                <div class="modal-header border-0 position-absolute top-0 end-0 z-index-high">
-                    <button type="button" class="btn-close btn-close-white fs-4" data-bs-dismiss="modal"></button>
+    <div class="modal fade" id="photoModal" tabindex="-1" aria-labelledby="photoModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">Título de la foto</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
-                <div class="modal-body p-0 position-relative">
-                    <img id="modalImage" src="" alt="Foto ampliada" class="img-fluid w-100 rounded-4">
-                    <div class="modal-overlay">
-                        <div class="modal-info">
-                            <h4 id="modalTitle" class="text-white fw-bold mb-2"></h4>
-                            <p id="modalDate" class="text-white-50 mb-2"></p>
-                            <p id="modalDescription" class="text-white"></p>
-                        </div>
-                    </div>
+                <div class="modal-body text-center">
+                    <img id="modalImage" src="" alt="Foto ampliada" class="img-fluid rounded mb-3" style="max-height: 400px; object-fit: contain;">
+                    <p id="modalDate" class="text-muted mb-2"></p>
+                    <p id="modalDescription" class="mb-0"></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        <i class="fas fa-times me-2"></i>Cerrar
+                    </button>
                 </div>
             </div>
         </div>
@@ -295,7 +304,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./js/familiash.js"></script>
+    <script src="./js/familiash.js?v=2.0"></script>
     <script>
         AOS.init({
             duration: 1000,
